themes/beautifulhugo/static/css/main.css
/* ... */
.mermaid button:hover {
  font-family: 'Helvetica Neue';
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  padding: 10px 5px;
  background: #FFF;
  color: #bd8201;
  max-height: 40px;
  -webkit-appearance: button;
  box-shadow: -2px -2px 10px rgba(0,0,0,.25) inset, 2px 2px 10px white inset;
}

.navbar-toggler-icon:hover {
  filter: invert(80%);
}

